[gd_scene load_steps=26 format=4 uid="uid://fr5vqykbi54o"]

[ext_resource type="Texture2D" uid="uid://bqmtavn12rhj2" path="res://assets/test_map5.png" id="1_bq4wg"]
[ext_resource type="Texture2D" uid="uid://bdy0m0gr2tme3" path="res://assets/level_art/48x48_Tileset/pipo-map001.png" id="2_6mxkn"]
[ext_resource type="Script" uid="uid://t1qdqjubkhud" path="res://src/Units/character_manager.gd" id="3_iucr1"]
[ext_resource type="PackedScene" uid="uid://dijjspgi8x8sv" path="res://src/Units/actor.tscn" id="4_e1a87"]
[ext_resource type="Script" uid="uid://dfeqtmcp7uacl" path="res://src/Units/CharacterStats.gd" id="5_n0kbp"]
[ext_resource type="Resource" uid="uid://mwedg6ttx2lp" path="res://characters/Mage/mageProfile.tres" id="6_hhk72"]
[ext_resource type="Resource" uid="uid://bu2f1ylnrxljm" path="res://characters/Knight/knightProfile.tres" id="7_8y1rk"]
[ext_resource type="Resource" uid="uid://b5bmi1atp4dnb" path="res://characters/Mage/mageEnemyProfile.tres" id="8_na0ed"]
[ext_resource type="Script" uid="uid://lvdowlbqk6fe" path="res://src/Level/GUI/actions_menu.gd" id="9_0yevp"]
[ext_resource type="Script" uid="uid://duw38t7v0nrgf" path="res://src/Level/GUI/default_attack.gd" id="10_rveb5"]
[ext_resource type="Script" uid="uid://b6oemt0bk5jyw" path="res://src/Level/GUI/stand_button.gd" id="11_esv70"]
[ext_resource type="Script" uid="uid://dso7okpirndht" path="res://src/Level/GUI/actor_info.gd" id="12_ky5eb"]
[ext_resource type="PackedScene" uid="uid://cats61ytkbbvj" path="res://src/PathVisuals/draw_path.tscn" id="13_jamn3"]
[ext_resource type="Script" uid="uid://bjl544x2g0v72" path="res://src/Combat/battle_handler.gd" id="14_c4lxs"]

[sub_resource type="GDScript" id="GDScript_ic0uy"]
script/source = "extends Node2D

# Refrences
@onready var actors: Node2D = $TileMapLayer/Actors
#@onready var gui: CanvasLayer = $GUI
@onready var actor_info: PanelContainer = $GUI/Margin/ActorInfo

#func _ready() -> void:
	#
	#actors.get_child(0).selected = true
	#actor_info.set_highlighted_actor(actors.get_child(0))	# Call gui on selceted unit
"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hiqwa"]
texture = ExtResource("1_bq4wg")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
0:1/0 = 0
0:1/0/custom_data_0 = true
1:1/0 = 0
1:1/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_ic0uy"]
tile_size = Vector2i(48, 48)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_hiqwa")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_70uel"]
texture = ExtResource("1_bq4wg")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_hiqwa"]
tile_size = Vector2i(48, 48)
sources/1 = SubResource("TileSetAtlasSource_70uel")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tlwt5"]
texture = ExtResource("2_6mxkn")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0

[sub_resource type="TileSet" id="TileSet_f3sb7"]
tile_size = Vector2i(48, 48)
sources/1 = SubResource("TileSetAtlasSource_tlwt5")

[sub_resource type="Resource" id="Resource_bq4wg"]
resource_local_to_scene = true
script = ExtResource("5_n0kbp")
curr_health = 100
max_health = 100
phys_attack = 20
mag_attack = 80
phys_defense = 30
mag_defense = 50
crit_chance = 15
level = 1
attack_range = 2
mobility = 3
speed = 3.0
metadata/_custom_type_script = "uid://dfeqtmcp7uacl"

[sub_resource type="Resource" id="Resource_6mxkn"]
resource_local_to_scene = true
script = ExtResource("5_n0kbp")
curr_health = 200
max_health = 200
phys_attack = 90
mag_attack = 10
phys_defense = 80
mag_defense = 20
crit_chance = 5
level = 1
attack_range = 1
mobility = 4
speed = 4.0
metadata/_custom_type_script = "uid://dfeqtmcp7uacl"

[sub_resource type="Resource" id="Resource_iucr1"]
resource_local_to_scene = true
script = ExtResource("5_n0kbp")
curr_health = 100
max_health = 100
phys_attack = 20
mag_attack = 60
phys_defense = 10
mag_defense = 30
crit_chance = 10
level = 1
attack_range = 2
mobility = 3
speed = 3.0
metadata/_custom_type_script = "uid://dfeqtmcp7uacl"

[sub_resource type="GDScript" id="GDScript_wse8f"]
script/source = "extends CanvasLayer

# Refrences
#@onready var actor_info: PanelContainer = $Margin/ActorInfo
#
#func set_highlighted_actor(actor: Actor) -> void:
	#
	## Stop showing info is player clicks on other than actor (not implemented yet)
	#if not actor:
		#actor_info.hide()
		#return
		#
	## Display some info (TODO: ADD MORE)
	#var info_vbox: VBoxContainer = actor_info.get_child(0)	# First child
	#actor_info.show()
	#info_vbox.get_child(0).text = actor.stats.character_name + \" the \" + actor.stats.battle_class_type
	#info_vbox.get_child(1).text = \"HP: \" + str(actor.stats.curr_health) + \"/\" + str(actor.stats.max_health)
"

[node name="Level_1-1" type="Node2D"]
script = SubResource("GDScript_ic0uy")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ic0uy")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 458752, 65536, 0, 524288, 65536, 0, 1, 65536, 0, 65537, 65536, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 65536, 0, 458753, 65536, 0, 524289, 65536, 0, 2, 65536, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 65536, 0, 524290, 0, 0, 3, 65536, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 4, 65536, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 65536, 0, 327684, 65536, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 5, 65536, 0, 65541, 65536, 0, 131077, 0, 0, 196613, 0, 0, 262149, 65536, 0, 327685, 65536, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 6, 65536, 0, 65542, 65536, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 7, 65536, 0, 65543, 65536, 0, 131079, 65536, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 65536, 0, 8, 65536, 0, 65544, 65536, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 65536, 0, 524296, 65536, 0, 9, 65536, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 65536, 0, 524297, 65536, 0, 10, 65536, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 65536, 0, 458762, 65536, 0, 524298, 65536, 0, 11, 65536, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 65536, 0, 458763, 65536, 0, 524299, 65536, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 65536, 0, 393228, 65536, 0, 458764, 65536, 0, 524300, 65536, 0)
layer_1/name = "Effects1"
layer_2/name = "Effects2"

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(600, 400)
offset_right = 600.0
offset_bottom = 400.0
color = Color(0.405487, 0.46665, 0.0850288, 1)
metadata/_edit_use_anchors_ = true

[node name="RangeTileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_hiqwa")
format = 2
layer_0/name = "Effects1"
layer_1/name = "Effects2"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAHAAAAAQACAAEAAAAHAAEAAQACAAEAAAAGAAEAAQAFAAUAAAAHAAIAAQACAAEAAAAIAAAAAQACAAEAAAAJAAAAAQACAAEAAAAKAAAAAQAAAAUAAAALAAAAAQABAAUAAAACAAAAAQABAAUAAAABAAAAAQAAAAUAAAAAAAAAAQABAAQAAAABAAEAAQACAAEAAAABAAYAAQAAAAEAAAAFAAUAAQABAAEAAAAIAAEAAQACAAEAAAALAAYAAQACAAEAAAAKAAYAAQAAAAEAAAAAAAEAAQABAAUAAAAAAAIAAQABAAQAAAAAAAUAAQABAAUAAAAAAAYAAQABAAQAAAABAAcAAQABAAEAAAACAAcAAQAAAAEAAAADAAAAAQACAAEAAAAEAAAAAQACAAEAAAAFAAAAAQAEAAQAAAAGAAAAAQAFAAQAAAAKAAcAAQACAAEAAAAJAAcAAQAAAAEAAAAIAAcAAQAAAAEAAAAKAAUAAQAAAAEAAAALAAIAAQAAAAEAAAAFAAEAAQAEAAUAAAAEAAUAAQABAAEAAAAHAAgAAQAAAAQAAAAIAAgAAQABAAQAAAAJAAgAAQAAAAQAAAAKAAgAAQABAAQAAAALAAgAAQAAAAQAAAAMAAcAAQAAAAQAAAAMAAYAAQAAAAUAAAAMAAgAAQACAAQAAAALAAcAAQAEAAEAAAAMAAUAAQAAAAQAAAAAAAcAAQABAAUAAAAAAAgAAQADAAQAAAABAAgAAQABAAUAAAAJAAQAAQAAAAEAAAAFAAQAAQAAAAEAAAAEAAQAAQACAAEAAAAAAAQAAQABAAQAAAAAAAMAAQABAAUAAAAKAAQAAQAGAAEAAAA=")
tile_set = SubResource("TileSet_f3sb7")

[node name="CharacterManager" type="Node2D" parent="TileMapLayer"]
script = ExtResource("3_iucr1")

[node name="Actors" type="Node2D" parent="TileMapLayer"]

[node name="playable_unit" parent="TileMapLayer/Actors" instance=ExtResource("4_e1a87")]
position = Vector2(120, 120)
stats = SubResource("Resource_bq4wg")
profile = ExtResource("6_hhk72")
is_friendly = true

[node name="playable_unit2" parent="TileMapLayer/Actors" instance=ExtResource("4_e1a87")]
position = Vector2(360, 264)
stats = SubResource("Resource_6mxkn")
profile = ExtResource("7_8y1rk")
is_friendly = true

[node name="enemy_unit" parent="TileMapLayer/Actors" instance=ExtResource("4_e1a87")]
position = Vector2(168, 312)
stats = SubResource("Resource_iucr1")
profile = ExtResource("8_na0ed")

[node name="GUI" type="CanvasLayer" parent="."]
script = SubResource("GDScript_wse8f")

[node name="Margin" type="MarginContainer" parent="GUI"]
offset_right = 600.0
offset_bottom = 400.0

[node name="ActionsMenu" type="PanelContainer" parent="GUI/Margin"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("9_0yevp")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Margin/ActionsMenu"]
layout_mode = 2

[node name="Default_Attack" type="Button" parent="GUI/Margin/ActionsMenu/VBoxContainer"]
layout_mode = 2
text = "Attack"
script = ExtResource("10_rveb5")

[node name="Use_Skill" type="Button" parent="GUI/Margin/ActionsMenu/VBoxContainer"]
layout_mode = 2
text = "Skill"

[node name="Pass_Turn" type="Button" parent="GUI/Margin/ActionsMenu/VBoxContainer"]
layout_mode = 2
text = "Pass"
script = ExtResource("11_esv70")

[node name="ActorInfo" type="PanelContainer" parent="GUI/Margin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("12_ky5eb")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Margin/ActorInfo"]
layout_mode = 2

[node name="ActorName" type="Label" parent="GUI/Margin/ActorInfo/VBoxContainer"]
layout_mode = 2
text = "Name: John"

[node name="HP" type="Label" parent="GUI/Margin/ActorInfo/VBoxContainer"]
layout_mode = 2
text = "HP: 00/00"

[node name="DrawPath" parent="." instance=ExtResource("13_jamn3")]

[node name="BattleHandler" type="Node2D" parent="."]
script = ExtResource("14_c4lxs")

[node name="AnimationTimer" type="Timer" parent="BattleHandler"]
one_shot = true
